--- a/YPChessVisualStudio/YPChessVisualStudio/YPChessVisualStudio.vcxproj
+++ b/YPChessVisualStudio/YPChessVisualStudio/YPChessVisualStudio.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
+    <ClInclude Include="Minimax.h" />
     <ClInclude Include="Move.h" />
     <ClInclude Include="Pawn.h" />
     <ClInclude Include="Piece.h" />
@@ -35,6 +36,7 @@
     <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="King.cpp" />
     <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="Minimax.cpp" />
     <ClCompile Include="Move.cpp" />
     <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Piece.cpp" />
