--- a/YPChessVisualStudio/YPChessVisualStudio/YPChessVisualStudio.vcxproj.filters
+++ b/YPChessVisualStudio/YPChessVisualStudio/YPChessVisualStudio.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Pawn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Minimax.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Piece.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Pawn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Minimax.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
